tests/import_invalid_path_whitespace.stderr
tests/import_invalid_path_whitespace.sl:2:1: error: SL2020: invalid import path (leading/trailing whitespace)
