tests/import_invalid_path_whitespace.sl
// Verifies import invalid path whitespace.
import " "

fn main() {}
